kustomizations/linkding/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: linkding
  name: linkding
spec:
  replicas: 1
  selector:
    matchLabels:
      app: linkding
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: linkding
    spec:
      containers:
        - image: sissbruecker/linkding:1.46.0@sha256:49eff0b0b90c63760fda75e615357a0e55fcb7dc51876f2a0a5dddb958bd3df4
          name: linkding
          ports:
            - containerPort: 9090
              name: linkding-web
          volumeMounts:
            - mountPath: "/etc/linkding/data"
              name: data
          resources:
            requests:
              memory: "256Mi"
              cpu: "200m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: linkding-pvc
status: {}
